--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ajv": "^6.8.1",
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "react": "^16.13.1",
@@ -38,7 +39,5 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.2.0",
-    "eslint-loader": "^4.0.2"
   }
 }
